# SysMonitor-Team11

SysMonitor/Client/: CMakeLists.txt
SysMonitor/Client/include/: networkManager.h  systemInfoCollector.h
SysMonitor/Client/src/: main.cpp  networkManager.cpp  systemInfoCollector.cpp
SysMonitor/Server/: CMakeLists.txt  data.csv
SysMonitor/Server/include/: DatabaseManager.h
SysMonitor/Server/src/: DatabaseManager.cpp  main.cpp  server
SysMonitor/Server/test/: test  test.cpp
